# BITest

./: .gitignore  BITest.sln  CMakeLists.txt  CMakeUserPresets.json  Instructions.txt  README.md  Shortcomings.txt  cmake_VS.bat  run_collection_test.bat  run_framework_test.bat  run_game.bat  vcpkg-configuration.json
BITFramework/: BITFramework.vcxproj  BITFramework.vcxproj.filters  BITest.cpp  BITestTypes.h  GenericCollectionTest.cpp  GenericCollectionTest.h  bitpch.cpp  bitpch.h
BITFramework/Component/Core/: Component.cpp  Component.h
BITFramework/Component/Custom/: Position.cpp  Position.h
BITFramework/Core/: GenericCollection.h  vec3.cpp  vec3.h
BITFramework/Core/Events/: EventDispatcher.h
BITFramework/Entity/Core/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
BITFramework/Object/: Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h
BITFramework/Tests/: FrameworkTest.cpp
BITFramework/src/: helpers.h
BITFramework/src/Core/: GenericCollection.cpp  GenericCollection.h
BITFramework/src/Object/: Object.h  ObjectManager.h
BITGame/: BITGame.vcxproj  BITGame.vcxproj.filters  BITGameCommon.h  Game.cpp  Game.h  GameEntry.cpp  Grid.cpp  Grid.h  Guard.cpp  Guard.h  PlayerComponent.h  PlayerTag.cpp  PlayerTag.h
BITGame/Actions/: ExitAction.cpp  ExitAction.h  Guard.cpp  Guard.h  PlayerCollision.cpp  PlayerCollision.h
BITGame/Components/: DiamondComponent.h  PatrolComponent.cpp  PatrolComponent.h  PlayerComponent.h
BITGame/Events/: PlayerWonEvent.h
BITGame/src/: BITGameCommon.h  Game.cpp  Game.h  Grid.cpp  Grid.h
(+35 files in other folders)
